--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Tahanima Chowdhury
 description: Software Engineer, QA @ Therap (BD) Ltd.
-baseurl: "/tahanima.github.io/remple/"
+baseurl: "/remple/"
 url: ""
 
 markdown: kramdown
