Re-designed the look and updated content

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,15 @@ title: Tahanima Chowdhury
 description: Software Engineer, QA @ Therap (BD) Ltd.
 baseurl: "/remple/"
 url: ""
-resume_url: "resume.pdf"
+photo_url: "my-photo.jpg"
+
+# This is an optional section
+# You can skip filling in one or more of the items in this section
+email: "tahanimachowdhury@gmail.com"
+linkedin: "http://linkedin.com/in/tahanima-chowdhury"
+github: "https://github.com/Tahanima"
+website: "http://tahanima.github.io/"
+medium: "https://tahanima.medium.com/"
 
 markdown: kramdown
 theme: minima
